# live-bootcamp-project

./: Cargo.toml  compose.yml
.github/workflows/: prod.yml
auth-service/: Cargo.toml
auth-service/.sqlx/: query-1ebfcd7c2b90969463e02821fde6ec5ab8a0068c01a580a7838ce57d02b34004.json  query-607b8938c53911ad3c4ab1881549df82b2821adb2340a7424acc05459dc11f37.json  query-626df42e6108fb84e7415700141a3c2c250a24d40bca74f3df1be9163b3a80ce.json  query-f38de5e133907ca614797d637d6f22057e5f32403c6f493b9ba0f985e20e2d13.json
auth-service/migrations/: 20250503140239_create_user_table.up.sql
auth-service/src/: app_state.rs  lib.rs  main.rs
auth-service/src/domain/: data_stores.rs  email.rs  email_client.rs  error.rs  mod.rs  password.rs  token_store.rs  user.rs  user_stores.rs
auth-service/src/routes/: login.rs  logout.rs  mod.rs  signup.rs  verify_2fa.rs  verify_token.rs
auth-service/src/services/: hashmap_banned_token_store.rs  hashmap_two_fa_code_store.rs  hashmap_user_store.rs  hashset_banned_token_store.rs  mock_email_client.rs  mod.rs  postmark_email_client.rs
auth-service/src/services/data_stores/: mod.rs  postgres_user_store.rs  redis_banned_token_store.rs  redis_two_fa_code_store.rs
auth-service/src/utils/: auth.rs  constants.rs  mod.rs  tracing.rs
auth-service/tests/api/: helpers.rs  login.rs  logout.rs  main.rs  root.rs  routes.rs  signup.rs  verify_2fa.rs  verify_token.rs
test-macro/: Cargo.toml
test-macro/src/: lib.rs
