[package]
name = "auth-service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.8.3"
#provides extra utilities for axum.
#The cookie feature enables the CookieJar extractor to view and set cookies.
axum-extra = { version = "0.10.1", features = ["cookie"] }
jsonwebtoken = "9.3.1"
chrono = "0.4.40"
dotenvy = "0.15.7"
#Enable async
tokio = { version = "1.44.2", features = ["full"] }
#Enable trait that has async fn become compitible to (dyn trait)
async-trait = "0.1.88"
tower-http = { version = "0.6.2", features = ["fs", "cors"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
uuid = { version = "1.16.0", features = ["v7", "serde"] }
validator = "0.20.0"
log = "0.4.27"
env_logger = "0.11.8"
rand = "0.8.5"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "migrate"] }
argon2 = { version = "0.5.3", features = ["std"] }
password-hash = "0.6.0-rc.0"

[dev-dependencies]
reqwest = { version = "0.12.15", default-features = false, features = ["json", "cookies"] }
fake = "=2.3.0"
quickcheck = "0.9.2"
quickcheck_macros = "0.9.1"